Fix overflowing user names and add tooltips

--- a/src/components/Layouts/MainMenuLayout.module.css
+++ b/src/components/Layouts/MainMenuLayout.module.css
@@ -21,8 +21,8 @@
 }
 
 .pagelist li {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .pagelist a {
